# AR-488-ESP32

./: .claudeignore  .gitignore  .gitmodules  .mcp.json  CLAUDE.md  Data_Stress_tests.md  Data_Stress_tests.odt  HardcopySetup784.md  MCP_Tools_for_TDS784_measurements.md  README.md  TODO_FIRMWARE_GATEWAY.md  Windowed_Waveform_GPIB_Transfers_from_TDS784.md  pyproject.toml
.claude/: settings.local.json
AR488_ESP32/: AR488_ESP32.json  AR488_ESP32.kicad_pcb  AR488_ESP32.kicad_prl  AR488_ESP32.kicad_pro  AR488_ESP32.kicad_sch  AR488_ESP32.net  IMPROVEMENTS_V2.md  erc_report.txt  fp-info-cache  fp-lib-table
AR488_ESP32/Elecrow_manufacturing_v1/: AR488_ESP32-B_Cu.gbr  AR488_ESP32-B_Silkscreen.gbr  AR488_ESP32-Edge_Cuts.gbr  AR488_ESP32-F_Paste.gbr  AR488_ESP32-PTH.drl  AR488_ESP32-job.gbrjob
AR488_ESP32/Elecrow_manufacturing_v1.1/: AR488_ESP32-B_Mask.gbr  AR488_ESP32-B_Paste.gbr  AR488_ESP32-B_Silkscreen.gbr  AR488_ESP32-Edge_Cuts.gbr
docs/: TECHNICAL_INFORMATIONS.md  a_faire.md
firmware/: HARDWARE.md  ImplementationPlan.md  network_creds.h.template  platformio.ini
firmware/src/: Display.cpp  Display.h  GpibBus.h  (+7 more)
hardware/: AI_Assisted_design_workflow.md  AR488_ESP32.json  AR488_ESP32.kicad_pcb  AR488_ESP32.kicad_prl  AR488_ESP32.kicad_pro  COMPONENT_INFORMATIONS.md  Electrical_Architecture.md  IMPROVEMENTS_V2.md  sym-lib-table
host_software/: MCP_Server_Implementation_Plan.md  MCP_Tools_for_TDS784A_measurements_revised.md  MCP_Tools_for_TDS784_measurements.md  data_stress_tests.py  request_gpib.py  scope_nvram_backup.py
test_hardware/: README.md  platformio.ini
(+41 files in other folders)
